# webrtc-rpi-cpp

./: CMakeLists.txt  Dockerfile  README-VN.md  README.md  package.xml  webrtc-rpi.sh
include/webrtc_gst_cpp/: gst_webrtc_adapter.h  signaling_client.h
launch/: stream.launch
scripts/: install_deps.sh
signaling/: package-lock.json  package.json  server.js
signaling/public/: index.html
src/: gst_webrtc_adapter.cpp  signaling_client.cpp  webrtc_rpi.cpp  webrtc_streamer_node.cpp
