<?xml version="1.0"?>
<package format="2">
  <name>webrtc_gst_cpp</name>
  <version>0.0.1</version>
  <description>ROS C++ package: stream /main_camera/image_raw via GStreamer webrtcbin (VP8) and WebSocket signaling</description>
  <maintainer email="you@example.com">phuoc-SET</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
</package>